# bullmq_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  readme.md  redis.conf
src/: config_service.rs  exemple_another_trigger_service.rs  job_model.rs  lib.rs  log_service.rs  main.rs  queue_service.rs  queue_trigger_service.rs  worker_service.rs
tests/: config_service_tests.rs  mocks.rs  queue_service_tests.rs  worker_service_tests.rs
tests/mocks/: mocks.rs
