[package]
name = "bullmq_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
redis = "0.28.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
async-trait = "0.1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
redis = "0.28.2"
serde_json = "1.0"
chrono = "0.4"
mockall = { version = "0.13.1" }
