[package]
name = "bullmq_rust"
version = "0.2.1"
edition = "2018"
authors = ["Thomas Bogard <thom.bogard@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/bogardt/bullmq_rust"
repository = "https://github.com/bogardt/bullmq_rust"
keywords = ["BullMQ", "Redis", "rust"]

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
redis = "0.28.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
redis = "0.28.2"
serde_json = "1.0"
chrono = "0.4"
mockall = { version = "0.13.1" }

[[bin]]
name = "queue_trigger"
path = "src/bin/queue_trigger.rs"

[[bin]]
name = "push_message"
path = "src/bin/push_message.rs"
